--- a/2.-PrismaApiRest/package.json
+++ b/2.-PrismaApiRest/package.json
@@ -2,15 +2,14 @@
   "name": "2.-prismaapirest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": " nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.6.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0"
